--- a/Android/ChemApp/src/main/res/drawable/ic_menu_exam.xml
+++ b/Android/ChemApp/src/main/res/drawable/ic_menu_exam.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
@@ -5,8 +6,8 @@
     android:viewportWidth="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M12,12m-3.2,0a3.2,3.2 0,1 1,6.4 0a3.2,3.2 0,1 1,-6.4 0" />
+        android:pathData="M5.03,13.171v4.035L12,21l6.97-3.794v-4.035L12,17.016L5.03,13.171z" />
     <path
         android:fillColor="#FF000000"
-        android:pathData="M9,2L7.17,4H4c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V6c0,-1.1 -0.9,-2 -2,-2h-3.17L15,2H9zm3,15c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5z" />
+        android:pathData="M12,3L1,8.997l11,6.006l8.99-4.925v6.938H23V8.997L12,3z" />
 </vector>
