--- a/Android/ChemApp/src/main/res/layout/nav_header_main.xml
+++ b/Android/ChemApp/src/main/res/layout/nav_header_main.xml
@@ -17,18 +17,44 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@android:drawable/sym_def_app_icon" />
-
-    <TextView
+    
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Prijava"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:gravity="bottom"
+        android:orientation="horizontal">
+        
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:text="Neprijavljen"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+        </LinearLayout>
+        
+        <ImageButton
+            android:id="@+id/toggle_levels"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:onClick="toggleDrawerMenu"
+            android:background="#00000000"
+            android:src="@drawable/ic_expand" />
+        
+    </LinearLayout>
 
 </LinearLayout>
