Login / Logout button

--- a/Android/ChemApp/src/main/res/layout/nav_header_main.xml
+++ b/Android/ChemApp/src/main/res/layout/nav_header_main.xml
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:text="Neprijavljen"
+                android:id="@+id/user_name"
+                android:text="@string/not_logged_in"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
