--- a/Android/ChemApp/src/main/res/values/colors.xml
+++ b/Android/ChemApp/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF3B6DD1</color>
     <color name="colorAccentLight">#FF7197DE</color>
     <color name="colorAccentDark">#FF2248A8</color>
+    <color name="playGames">#FFB2CB39</color>
 </resources>
