--- a/Android/ChemApp/src/main/res/layout/nav_header_main.xml
+++ b/Android/ChemApp/src/main/res/layout/nav_header_main.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
-            android:onClick="toggleDrawerMenu"
+            android:onClick="updateDrawerMenu"
             android:background="#00000000"
             android:src="@drawable/ic_expand" />
         
