--- a/Android/ChemApp/src/main/res/layout-large-land/content_main.xml
+++ b/Android/ChemApp/src/main/res/layout-large-land/content_main.xml
@@ -1,27 +1,35 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.hitkoDev.chemApp.MainActivity"
     tools:showIn="@layout/app_bar_main">
-    
-    <FrameLayout 
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/helper_frame">
+	
+	<LinearLayout 
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
+		
+		<FrameLayout 
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:id="@+id/helper_frame">
 
-    </FrameLayout>
-    
-    <FrameLayout 
-        android:layout_weight="2"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:id="@+id/main_frame">
+		</FrameLayout>
+		
+		<FrameLayout 
+                    android:layout_weight="2"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/main_frame">
 
-    </FrameLayout>
-    
-</LinearLayout>
+		</FrameLayout>
+		
+	</LinearLayout>
+	
+</RelativeLayout>
