--- a/Android/ChemApp/src/main/res/values/colors.xml
+++ b/Android/ChemApp/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccentLight">#FF7197DE</color>
     <color name="colorAccentDark">#FF2248A8</color>
     <color name="playGames">#FFB2CB39</color>
+    <color name="white_opaque">#FFFFFFFF</color>
 </resources>
