--- a/Android/ChemApp/src/main/res/layout/section_card.xml
+++ b/Android/ChemApp/src/main/res/layout/section_card.xml
@@ -16,9 +16,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@drawable/default_ripple"
+        android:clickable="true"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin">
         
         <LinearLayout
             android:layout_width="0dp"
@@ -55,6 +58,14 @@
                 android:text=""
                 android:id="@+id/section_bookmark"/>
             
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/dropdown"
+                android:text=""
+                android:visibility="gone"
+                android:id="@+id/section_expand"/>
+            
         </LinearLayout>
     
     </LinearLayout>
@@ -64,8 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:visibility="gone"
+        android:paddingLeft="@dimen/activity_horizontal_margin">
 
     </LinearLayout>
     
