--- a/Android/ChemApp/src/main/res/layout/section_card.xml
+++ b/Android/ChemApp/src/main/res/layout/section_card.xml
@@ -22,6 +22,13 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin">
+    
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tile_icon"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_tile_generic" />
         
         <LinearLayout
             android:layout_width="0dp"
