--- a/Android/ChemApp/src/main/res/values/dimens.xml
+++ b/Android/ChemApp/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="tile_letter_font_size_tiny">24dp</dimen>
+    <dimen name="tile_letter_font_size_small">32dp</dimen>
+    <dimen name="letter_tile_size">56dp</dimen>
 </resources>
