--- a/Android/ChemApp/src/main/res/menu/activity_main_drawer.xml
+++ b/Android/ChemApp/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,10 @@
         android:id="@+id/nav_app"
         android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_sections"
+            android:icon="@drawable/ic_menu_sections"
+            android:title="Poglavja" />
+        <item
             android:id="@+id/nav_lessons"
             android:icon="@drawable/ic_menu_lessons"
             android:title="Učenje" />
