Fragments, stabilitx fixes, navigation, splash screen

--- a/Android/ChemApp/src/main/res/values/dimens.xml
+++ b/Android/ChemApp/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="tile_letter_font_size_medium">32dp</dimen>
     <dimen name="letter_tile_size">56dp</dimen>
     <dimen name="letter_sub_tile_size">40dp</dimen>
+    <dimen name="splash_button_width">192dp</dimen>
 </resources>
