--- a/Android/ChemApp/src/main/res/values/dimens.xml
+++ b/Android/ChemApp/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="tile_letter_font_size_small">24dp</dimen>
     <dimen name="tile_letter_font_size_medium">32dp</dimen>
+    <dimen name="icon_external_pading">4dp</dimen>
     <dimen name="letter_tile_size">56dp</dimen>
     <dimen name="letter_sub_tile_size">40dp</dimen>
     <dimen name="splash_button_width">192dp</dimen>
