--- a/Android/ChemApp/src/main/res/values/colors.xml
+++ b/Android/ChemApp/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="colorAccentDark">#FF2248A8</color>
     <color name="playGames">#FFB2CB39</color>
     <color name="white_opaque">#FFFFFFFF</color>
+    <color name="correct">#FF388E3C</color>
+    <color name="incorrect">#FFD32F2F</color>
     
     <array name="letter_tile_colors">
         <item>#ffdb4437</item>
