--- a/Android/ChemApp/src/main/res/layout/exercise_content.xml
+++ b/Android/ChemApp/src/main/res/layout/exercise_content.xml
@@ -39,4 +39,15 @@
         android:id="@+id/exercise_next"
         app:fabSize="normal" />
     
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_sections"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/exercise_sections"
+        android:onClick="newSection"
+        app:fabSize="normal" />
+    
 </RelativeLayout>
