--- a/Android/ChemApp/src/main/res/layout/exercise_input.xml
+++ b/Android/ChemApp/src/main/res/layout/exercise_input.xml
@@ -13,8 +13,16 @@
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:id="@+id/exercise_text" />
+
+    <TextView 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:paddingLeft="@dimen/icon_external_pading"
+        android:paddingRight="@dimen/icon_external_pading"
+        android:id="@+id/exercise_label" />
     
     <EditText
         android:id="@+id/exercise_input"
