--- a/Android/ChemApp/src/main/res/layout/exercise_radio.xml
+++ b/Android/ChemApp/src/main/res/layout/exercise_radio.xml
@@ -13,7 +13,7 @@
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:id="@+id/exercise_text" />
     
     <RadioButton
