--- a/Android/ChemApp/src/main/res/layout/exercise_radio.xml
+++ b/Android/ChemApp/src/main/res/layout/exercise_radio.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/primary_material_dark"
         android:id="@+id/exercise_text" />
     
     <RadioButton
