--- a/Android/ChemApp/src/main/res/layout/layout_splash.xml
+++ b/Android/ChemApp/src/main/res/layout/layout_splash.xml
@@ -12,15 +12,17 @@
         
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="match_parent" 
         android:layout_weight="1"
         android:orientation="vertical"
-        android:background="@drawable/splash_screen_animated"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:id="@+id/image_cont" />
+        android:gravity="center" >
+        
+        <ImageView
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:src="@drawable/ic_splash" />
+        
+    </LinearLayout>
     
     <Button
         android:layout_height="wrap_content"
